b2b overflow black style less fix - raja

--- a/hybris-sagia/hybris/bin/custom/sagia/investsaudistorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/lambda/less/style.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/investsaudistorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/lambda/less/style.less
@@ -16008,7 +16008,7 @@ fieldset#startDate .form-group .control-label {
 #cboxOverlay {
   background: #343a4a;
   opacity: 0.5;
-  height: 100vh;
+  height: 100%;
 }
 #colorbox {
   outline: 0;
